<?xml version="1.0"?>
<package format="2">
  <name>rtmbuild_sample1</name>
  <version>0.0.0</version>
  <description>The rtmbuild_sample1 package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtmbuild2</depend>
  <depend>roscpp</depend>
  <depend>rtmbuild_sample0</depend>
</package>
